--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>JSON Chat</title>
+  <title>Chat with JSON!</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -12,6 +12,6 @@
 <body>
   
   <div id="main">
-    <h1>Chat!</h1>
+    <h1>Chat with JSON!</h1>
   </div>
 </html>
