--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
-<head>
-  <meta charset="utf-8">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Chat with JSON!</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="js/utils.js"></script>
+  </head>
+  <body>
 
-  <title>Chat with JSON!</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script type="text/javascript" src="js/utils.js"></script>
-</head>
+    <div id="main">
+      <h1>Chat with JSON!</h1>
+    </div>
 
-<body>
-  
-  <div id="main">
-    <h1>Chat with JSON!</h1>
-  </div>
+  </body>
 </html>
