--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <!-- internal javascript -->
     <script src="scripts/config.js"></script>
     <!-- <script src="scripts/app.js"></script> -->
-    <script src="scripts/app2.js"></script>
+    <script src="scripts/app.js"></script>
     <title>Chat-Client</title>
   </head>
   <body>
