--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <!-- external javascript -->
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/underscore/underscore-min.js"></script>
-    <script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script>
+    <!--<script src="http://www.parsecdn.com/js/parse-1.2.13.min.js"></script> -->
     <script src="bower_components/backbone/backbone.js"></script>
     <!-- internal javascript -->
     <script src="scripts/config.js"></script>
